added fullscreen and back to top buttons

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 	<body class="top-navigation">
 
-		<div id="wrapper">
+		<div id="wrapper" class="full-height-scroll">
 			<div id="page-wrapper" class="gray-darker-bg">
 				<!--_________ NAVBAR BEGIN ___________-->
 				<div class="row">
@@ -169,8 +169,8 @@
 							<div class="col-lg-3 ui-sortable">
 								<!-- PROFILE BEGIN
 ----------------------------------------------------------------->
-								<div id="my-profile-1" class="hidden-xs">
-									<div class="widget-head-color-box navy-bg p-lg text-center">
+								<div id="my-profile" class="hidden-xs">
+									<div id="expanded-profile" class="widget-head-color-box navy-bg p-lg text-center">
 										<h3 class="m-b-lg">Teretulemast siseveeb!</h3>
 										<img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
 										<div class="m-b-md">
@@ -178,7 +178,13 @@
 												Sander Marandi
 											</h2>
 											<small>IT projektijuht</small>
+											<a class="pull-right close ">
+												<i class="fa fa-chevron-up"></i>
+											</a>
 										</div>
+									</div>
+									<div id="minimized-profile">
+										<p class="m-l-md m-r-xs">Sisse loginud: <strong class="m-l-xs">Sander Marandi </strong><a class="open"><i class="fa fa-chevron-down m-l-xs"></i></a></p>
 									</div>
 								</div>
 								<!--PROFILE END
@@ -792,39 +798,23 @@
 				</div>
 			</div>
 		</div>
-		<!--_________PLUGINS JS__________________ -->
+		<!-- FULLSCREEN TOGGLE BUTTON -->
+		<button id="fullscreen-btn" class="btn btn-sm btn-grey pull-right" type="button" style="opacity: 0;"><i class="fa fa-arrows"></i></button>
+		<!-- SCROLL TO TOP BUTTON -->
+				<a href="#" class="scroll-up"><i class="fa fa-2x fa-angle-double-up"></i></a>
+		<!--SCRIPTS
+------------------------------------------------------------------>
 		<script src="js/jquery-2.1.1.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-		<script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-
-		<!-- Peity -->
-		<script src="js/plugins/peity/jquery.peity.min.js"></script>
-
-		<!-- Custom and plugin javascript -->
+		<script src="js/plugins/slimscroll/jquery.slimscroll.js"></script>
 		<script src="js/inspinia.js"></script>
 		<script src="js/plugins/pace/pace.min.js"></script>
-
 		<script src="js/plugins/jquery-ui/jquery-ui.min.js"></script>
-
-		<!-- iCheck -->
-		<script src="js/plugins/iCheck/icheck.min.js"></script>
-
-		<!-- Peity d data  -->
-		<script src="js/demo/peity-demo.js"></script>
-
+		<script src="js/plugins/placeholder/jquery.placeholder.min.js"></script>
 		<!-- My custom scripts -->
 		<script src="js/navbar_menu.js"></script>
 		<script src="js/dashboard.js"></script>
 
-		<script>
-
-			$(document).ready(function () {
-				//DRAG'N'DROP
-				WinMove();
-
-			});
-
-		</script>
 	</body>
 </html>
